--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,28 +66,21 @@ section {
 
 /* Estilizando Carrossel */
 
-.c1{
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../storage/not\ 1.jpeg");
+.c{
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-color: #838791;
 }
 
-.c2{
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../storage/not\ 2.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-color: #838791;
-}
-
-.c3{
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../storage/not\ 3.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-color: #838791;
+.new_img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 40%;
 }
 
 .carousel{
