--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,10 @@ p{
     padding: 15px 5%;
 }
 
+.titulo{
+    font-size: 32px;
+}
+
 .sidebar {
     background-color: #2A3346;
     color: #ffffff;
@@ -36,7 +40,6 @@ p{
 
 .navbar a {
     color: #ffffff;
-    font-size: 22px;
 }
 
 .sidebar a {
@@ -45,9 +48,9 @@ p{
     font-size: 19px;
 }
 
-.navbar a img,
-svg {
-    margin-right: 5px;
+.search{
+    background-color: #ffffff;
+    border-radius: 5px;
 }
 
 section {
@@ -68,16 +71,12 @@ section {
 
 .c{
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
-    background-repeat: no-repeat;
-    background-size: cover;
     background-position: center;
     background-color: #838791;
 }
 
 .new_img{
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     opacity: 40%;
@@ -97,13 +96,6 @@ section {
     font-weight: bold;
 }
 
-.carousel-item div{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding-bottom: 50px;
-}
 
 .carousel-item a{
     background-color: #2A3346;
@@ -121,7 +113,7 @@ section {
 }
 
 .card{
-    max-width: 30%;
+    min-width: 30%;
     background-color: #3D3D3D;
     padding: calc(var(--bs-gutter-x) * .5);}
 
@@ -138,4 +130,27 @@ section {
 
 footer{
     background-color: #2A3346;
+}
+
+@media screen and (max-width:480px) {
+
+    p{
+        font-size: 14px;
+    }
+
+    .estado span{
+        display: none;
+    }
+
+    .titulo{
+        font-size: 25px;
+    }
+
+    .pesquisa{
+        display: none;
+    }
+
+    .card{
+        min-width: 360px;
+    }
 }
