--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/style.css') }}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
   <link rel="shortcut icon" href="{{ url_for('static',filename='icons/covid.ico') }}" type="image/x-icon">
   <title>Covid-19 Journal</title>
 </head>
@@ -16,11 +16,10 @@
 
   <!-- Cabeçalho -->
 
-  <header>
-    <nav class="navbar sticky-top shadow flex-nowrap">
+    <nav class="navbar sticky shadow flex-nowrap">
       <div class="container-fluid">
 
-        <div class="conainer-fluid">
+        <div class="conainer-fluid estado">
           <a class="d-inline-flex navbar-brand" data-bs-toggle="offcanvas" href="#estados" role="button"
             aria-controls="estados">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-justify"
@@ -28,30 +27,31 @@
               <path fill-rule="evenodd"
                 d="M2 12.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z" />
             </svg>
-            Estados
+            <span>Estados</span>
           </a>
         </div>
 
 
-        <a class="navbar-brand" href="{{ url_for('pagina_principal')}}">
+        <a class="navbar-brand titulo" href="{{ url_for('pagina_principal')}}">
           <img src="{{ url_for('static',filename='storage/covid.png') }}" width="30px" height="30px">
-          Covid-19 Journal
+          <span>Covid-19 Journal</span>
+         
         </a>
+        <div class="pesquisa">
+          <form class="d-flex search align-items-center pesquisa">
 
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Pesquisar Notícia" aria-label="search" />
-          <a href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="35" fill="currentColor" class="bi bi-search"
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="grey" class="bi bi-search m-1"
               viewBox="0 0 16 16">
               <path
                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
             </svg>
-          </a>
-        </form>
+            <input class="form-control ms-1" type="search" placeholder="Pesquisar Notícia" aria-label="search"
+              style="border: none;" />
 
+          </form>
+        </div>
       </div>
     </nav>
-  </header>
 
   <!-- Sidebar Estados -->
 
@@ -104,37 +104,41 @@
     <!-- Carrossel de destaques -->
     <div id="myCarousel" class="carousel slide shadow" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
+          aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
 
-          {% for item in noticias %}
+        {% for item in carrossel %}
+        <div class="carousel-item {{'active' if item == carrossel[0]}} c">
 
-          <div class="carousel-item {{'active' if item == noticias[0]}} c">
-          
-            <img src="{{item.get_image()}}" class="new_img">
-  
-            <div class="container">
-              <div class="carousel-caption text-start">
-                <h1>{{item.get_tittle()}}</h1>
-                <p>{{item.get_headline()}}</p>
-                <p><a class="btn btn-lg btn-primary" href="{{url_for('show_noticia', id=item.get_id())}}">Ler Notícia</a></p>
-              </div>
+          <img src="{{item.get_image()}}" class="new_img">
+
+          <div class="container">
+            <div class="carousel-caption text-start">
+              <h1>{{item.get_tittle()}}</h1>
+              <p>{{item.get_headline()}}</p>
+              <p><a class="btn btn-lg btn-primary" href="{{url_for('show_noticia', id=item.get_id())}}">Ler Notícia</a>
+              </p>
             </div>
           </div>
-          {% endfor %}
         </div>
+        {% endfor %}
+
       </div>
+    </div>
     </div>
     <!-- fim do carrossel -->
 
+    <h1 class="text-center m-3">Principais Noticias</h1>
     <!-- Lista de notícias (dinâmica) -->
-    <div class="row flex-wrap justify-content-center m-0">
+    <div class="row flex-row flex-wrap align-content-center m-0">
       {% for item in noticias %}
       <div class="card m-4 col shadow">
-        <img src={{item.get_image()}} class="card-img-top shadow" alt="..." style="max-width: 100%; max-height: 200px; border-radius: 5px;">
+        <img src={{item.get_image()}} class="card-img-top shadow" alt="..."
+          style="max-width: 100%; max-height: 200px; border-radius: 5px;">
         <div class="card-body">
           <h5 class="card-title">{{ item.get_tittle() }}</h5>
           <p class="card-text">{{item.get_headline()}}</p>
