--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,11 +23,12 @@ p{
     color: #ffffff;
     text-decoration: none;
     font-family: 'Andada Pro', serif;
-    padding: 15px 5%;
+    padding: 15px 30px;
 }
 
 .titulo{
     font-size: 32px;
+    margin: 0;
 }
 
 .sidebar {
@@ -48,6 +49,10 @@ p{
     font-size: 19px;
 }
 
+.estado{
+    width: 20%;
+}
+
 .estado-list{
     max-width: 80%;
     margin: 10px 0px;
@@ -57,7 +62,12 @@ p{
     max-width: 20%;
 }
 
+.pesquisa{
+    width: 20%;
+}
+
 .search{
+    width: 100%;
     background-color: #ffffff;
     border-radius: 5px;
 }
@@ -89,6 +99,7 @@ section {
     width: 100%;
     height: 100%;
     opacity: 40%;
+    object-fit: cover;
 }
 
 .carousel-item{
@@ -118,8 +129,8 @@ section {
 }
 
 .card{
-    min-width: 30%;
-    max-width: 30%;
+    min-width: 29%;
+    max-width: 29%;
     background-color: #3D3D3D;
     padding: calc(var(--bs-gutter-x) * .5);}
 
@@ -137,6 +148,24 @@ section {
 footer{
     background-color: #2A3346;
 }
+
+/* Estilizando página da noticia */
+
+.sessao{
+    margin-top: 88px;
+}
+
+.noticia{
+    background-color: #3D3D3D;
+    width: 80%;
+}
+
+.noticia img{
+    width: 70%;
+    object-fit: cover;
+}
+
+/* fim da notícia */
 
 @media screen and (max-width:480px) {
 
@@ -159,4 +188,6 @@ footer{
     .card{
         min-width: 360px;
     }
+
+
 }
