--- a/templates/new.html
+++ b/templates/new.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{new.get_tittle()}}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
 </head>
+
 <body>
-    <div class="container p-50">
-        <div class="d-flex">
-            <div class="container">
-                <div class="row">
-                    <h2>{{new.get_tittle()}}</h2>
-                    <img src="{{new.get_image()}}" class="w-25 rounded">
-                </div>
+    <nav class="navbar fixed-top shadow flex-nowrap justify-content-space between">
+        <a href="{{url_for('pagina_principal')}}">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+          </svg>
+        </a>
+        <a class="navbar-brand titulo" href="{{ url_for('pagina_principal')}}">
+            <img src="{{ url_for('static',filename='storage/covid.png') }}" width="30px" height="30px">
+            <span>Covid-19 Journal</span>
+        </a>
+        <div></div>
+    </nav>
+
+    <section class="sessao">
+        <div class="container noticia shadow p-3">
+            <h2>{{new.get_tittle()}}</h2>
+            <p>{{new.get_headline()}}</p>
+            <img src="{{new.get_image()}}" class="shadow" />
+            <p class="py-3 m-0">{{new.get_text()}}</p>
         </div>
+    </section>
+
+    <footer class="d-flex justify-content-center align-items-center shadow py-3">
+        <p class="my-2">© 2022 Thiago Cardoso (202120325)</p>
+    </footer>
+
 </body>
+
 </html>
